; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest_tdb3.c_waitOnCheckpointer.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest_tdb3.c_waitOnCheckpointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@LSM_INFO_CHECKPOINT_SIZE = common dso_local global i32 0, align 4
@LSM_OK = common dso_local global i32 0, align 4
@LSMTEST_MODE_BACKGROUND_CKPT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*)* @waitOnCheckpointer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @waitOnCheckpointer(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %26, %2
  store i32 0, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @LSM_INFO_CHECKPOINT_SIZE, align 4
  %11 = call i32 @lsm_info(i32* %9, i32 %10, i32* %6)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @LSM_OK, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %21, label %15

15:                                               ; preds = %8
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp slt i32 %16, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %15, %8
  br label %27

22:                                               ; preds = %15
  %23 = call i32 @usleep(i32 5000)
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 5
  store i32 %25, i32* %5, align 4
  br label %26

26:                                               ; preds = %22
  br i1 true, label %8, label %27

27:                                               ; preds = %26, %21
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32 @lsm_info(i32*, i32, i32*) #1

declare dso_local i32 @usleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
